v1.3.0
- NEW: Header Elemets — Add new option to show Shopping Cart's amount.
- NEW: Performance - Add new option to disable emoji scripts to improve performance.
- NEW: Social Icons — Add more social icons: WordPress, Messenger, Skype, Slack, Telegram, WhatsApp, GitLab, Bitbucket.
- NEW: Sidebar - Add new option to set widget title tag (h2 / h3 / h4 / div) for custom SEO needs.
- NEW: Footer Widgets Bar - Add new option to set widget title tag (h2 / h3 / h4 / div) for custom SEO needs.
- TWEAK: Header Elements — Improve header's Shopping Cart template (**If you are override this template on your Child Theme, please review the template again**).
- TWEAK: Header Builder — Improve header menu javascript to support full width Mega Menu (available since Suki Pro v1.2).
- TWEAK: Social Icons — Update some existing social icons.
- TWEAK: Social Icons — Add hidden label on each social icon for better accessibility.
- TWEAK: Google Fonts — Update Google Fonts list.
- TWEAK: Customizer — Improve Customizer UI & UX.
- FIX: Header — Shopping cart dropdown toggle does nothing on Cart and Checkout pages. Now it works like a link to the Cart page.
- FIX: WooCommerce — "My Account" page's navigation links color doesn't follow the global link color configured in Customizer.

v1.2.11
- FIX: WooCommerce cart's cross sells hiding option bug when using 2 columns layout.
- FIX: WooCommerce quantity increment button's Javascript for better compatibility with 3rd party plugins.
- FIX: WooCommerce products grid's AJAX add to cart loading button CSS.
- FIX: Remove bottom border on WooCommerce's cart table when on mobile view.

v1.2.10
- TWEAK: Improve mobile header dropdown behavior: clicking the menu link will also open the dropdown.
- FIX: Mobile header dropdown bug from v1.2.9.

v1.2.9
- FIX: WooCommerce cart's cross sells hiding option.
- FIX: WooCommerce product's gallery and summary width CSS.
- FIX: Border radius on "toggle buttons".
- FIX: Javascript error in IE 11 browser.