@@ -114,6 +114,7 @@ $wp_customize->add_control( new Suki_Customize_Control_Builder( $wp_customize, $
 		'search-bar'             => '<span class="dashicons dashicons-search"></span>' . esc_html__( 'Search Bar', 'suki' ),
 		'search-dropdown'        => '<span class="dashicons dashicons-search"></span>' . esc_html__( 'Search Icon', 'suki' ),
 		'shopping-cart-link'     => '<span class="dashicons dashicons-cart"></span>' . esc_html__( 'Cart Link', 'suki' ),
+		'shopping-cart-dropdown' => '<span class="dashicons dashicons-cart"></span>' . esc_html__( 'Cart Dropdown', 'suki' ),
 		'social'                 => '<span class="dashicons dashicons-twitter"></span>' . esc_html__( 'Social', 'suki' ),
 		'mobile-vertical-toggle' => '<span class="dashicons dashicons-menu"></span>' . esc_html__( 'Toggle', 'suki' ),
 	),
@@ -129,6 +130,7 @@ $wp_customize->add_control( new Suki_Customize_Control_Builder( $wp_customize, $
 		'search-bar'             => array( 'mobile_main_left', 'mobile_main_center', 'mobile_main_right' ),
 		'search-dropdown'        => array( 'mobile_vertical_top' ),
 		'shopping-cart-link'     => array( 'mobile_vertical_top' ),
+		'shopping-cart-dropdown' => array( 'mobile_vertical_top' ),
 		'mobile-vertical-toggle' => array( 'mobile_vertical_top' ),
 	),
 	'priority'    => 10,
