@@ -38,6 +38,23 @@ $wp_customize->add_control( $key, array(
 	'priority'    => 10,
 ) );
 
+// Visibility
+$key = 'header_cart_amount_visibility';
+$wp_customize->add_setting( $key, array(
+	'default'     => suki_array_value( $defaults, $key ),
+	'sanitize_callback' => array( 'Suki_Customizer_Sanitization', 'multiselect' ),
+) );
+$wp_customize->add_control( new Suki_Customize_Control_MultiCheck( $wp_customize, $key, array(
+	'section'     => $section,
+	'label'       => esc_html__( 'Visibility', 'suki' ),
+	'choices'     => array(
+		'desktop' => esc_html__( 'Desktop', 'suki' ),
+		'tablet'  => esc_html__( 'Tablet', 'suki' ),
+		'mobile'  => esc_html__( 'Mobile', 'suki' ),
+	),
+	'priority'    => 10,
+) ) );
+
 /**
  * ====================================================
  * Colors
@@ -58,6 +75,12 @@ foreach ( $colors as $key => $label ) {
 	$wp_customize->add_control( new Suki_Customize_Control_Color( $wp_customize, $key, array(
 		'section'     => $section,
 		'label'       => $label,
-		'priority'    => 10,
+		'priority'    => 20,
 	) ) );
 }
+
+/**
+ * ====================================================
+ * Dropdown
+ * ====================================================
+ */
