@@ -1,10 +1,11 @@
 v1.3.0
-- NEW: Header Elemets — Add new option to show Shopping Cart's amount.
+- NEW: Header Elemets — Add new options to show Shopping Cart's amount and its responsive visibility.
 - NEW: Performance - Add new option to disable emoji scripts to improve performance.
 - NEW: Social Icons — Add more social icons: WordPress, Messenger, Skype, Slack, Telegram, WhatsApp, GitLab, Bitbucket.
 - NEW: Sidebar - Add new option to set widget title tag (h2 / h3 / h4 / div) for custom SEO needs.
 - NEW: Footer Widgets Bar - Add new option to set widget title tag (h2 / h3 / h4 / div) for custom SEO needs.
 - TWEAK: Header Elements — Improve header's Shopping Cart template (**If you are override this template on your Child Theme, please review the template again**).
+- TWEAK: Header Elements — Allow "Shopping Cart Dropdown" inside the mobile header bar.
 - TWEAK: Header Builder — Improve header menu javascript to support full width Mega Menu (available since Suki Pro v1.2).
 - TWEAK: Social Icons — Update some existing social icons.
 - TWEAK: Social Icons — Add hidden label on each social icon for better accessibility.
